# Onyx

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  FCMP++-implementation.md  LICENSE  PROTOCOL.md  README.md  SECURITY.md
app/: index.html  (+6 more)
nexus-crypto-core/: Cargo.toml  README.md
nexus-crypto-core/src/: lib.rs
nexus-crypto-core/src/clsag/: constants.rs  hash.rs  mod.rs  sign.rs  types.rs  verify.rs
nexus-crypto-core/src/cmd/: amounts.rs  derivation.rs  masks.rs  mod.rs  utils.rs
nexus-crypto-core/src/encryption/: backup.rs  ecdh.rs  mod.rs  symmetric.rs  types.rs
nexus-crypto-core/src/frost/: dkg.rs  lagrange.rs  mod.rs  types.rs
nexus-crypto-core/src/keys/: derive.rs  image.rs  mod.rs  validate.rs
nexus-crypto-core/src/nonce/: aggregate.rs  commit.rs  generate.rs  mod.rs
nexus-crypto-core/src/types/: address.rs  errors.rs  escrow.rs  mod.rs
nexus-crypto-core/wasm/: Cargo.toml
nexus-crypto-core/wasm/src/: lib.rs
nexus-types/: Cargo.toml
nexus-types/src/: currency.rs  lib.rs  swap.rs
onyx-crypto-core/: Cargo.toml  README.md
onyx-crypto-core/src/: lib.rs
onyx-crypto-core/src/clsag/: constants.rs  hash.rs  mod.rs  sign.rs  types.rs  verify.rs
onyx-crypto-core/src/cmd/: amounts.rs  derivation.rs  masks.rs  mod.rs  utils.rs
onyx-crypto-core/src/encryption/: backup.rs  ecdh.rs  mod.rs  symmetric.rs  types.rs
onyx-crypto-core/src/fcmp/: curves.rs  membership.rs  mod.rs  nullifier.rs  tree.rs
onyx-crypto-core/src/frost/: dkg.rs  lagrange.rs  mod.rs  types.rs
onyx-crypto-core/src/gsp/: mod.rs  multisig.rs  types.rs  verify.rs
onyx-crypto-core/src/keys/: derive.rs  image.rs  validate.rs
onyx-crypto-core/src/nonce/: aggregate.rs  commit.rs  generate.rs  mod.rs
onyx-crypto-core/src/rerandomize/: mod.rs  real.rs  stub.rs
onyx-crypto-core/src/types/: address.rs  errors.rs  escrow.rs  fcmp_types.rs  mod.rs  transaction.rs
onyx-crypto-core/tests/: sal_multisig_integration.rs
onyx-crypto-core/wasm/: Cargo.toml
onyx-crypto-core/wasm/src/: lib.rs
server/: .env.test  Cargo.toml  SQLCIPHER-REALITY-CHECK.md  marketplace.db.unencrypted.restored
server/migrations/2025-11-16-000001-add-escrow-constraints/: down.sql  up.sql
server/migrations/2025-11-18-225449_add_encrypted_wallet_seed/: down.sql  up.sql
server/migrations/2025-11-18-225521_create_user_escrow_roles/: down.sql  up.sql
server/migrations/2025-11-20-073322_create_disputes_table/: down.sql  up.sql
server/migrations/2025-11-21-201741_create_wallets_table/: down.sql  up.sql
server/migrations/2025-11-21-214500_add_withdrawal_limits_to_wallets/: down.sql  up.sql
server/migrations/2025-11-22-203351_create_multisig_sessions_table/: down.sql  up.sql
server/migrations/2025-11-23-081122_add_signature_fields_to_escrows/: down.sql  up.sql
server/migrations/2025-11-24-120512_add_payout_addresses_to_escrows/: down.sql  up.sql
server/migrations/2025-11-24-193131_add_multisig_view_key_to_escrows/: down.sql  up.sql
server/migrations/2025-11-25-004800_add_view_key_component_to_wasm_participants/: down.sql  up.sql
server/migrations/2025-11-26-172917_add_funding_commitment_data/: down.sql  up.sql
server/migrations/2025-11-27-102301_add_ring_data_json/: down.sql  up.sql
server/migrations/2025-11-27-223201_add_partial_key_images/: down.sql  up.sql
server/migrations/2025-11-29-083342_add_round_robin_signing/: down.sql  up.sql
server/migrations/2025-12-05-165428_add_funding_output_pubkey/: down.sql  up.sql
server/migrations/2025-12-05-232351_add_funding_tx_pubkey/: down.sql  up.sql
server/migrations/2025-12-09-191427_add_musig2_nonce_fields/: down.sql  up.sql
server/migrations/2025-12-11-160745_add_first_signer_role/: down.sql  up.sql
server/migrations/2025-12-21-080551_add_mu_columns/: down.sql  up.sql
server/migrations/2025-12-24-113425_add_first_signer_had_r_agg/: down.sql  up.sql
server/migrations/2025-12-24-201537_add_round_robin_signing/: down.sql  up.sql
server/migrations/2025-12-24-235228_frost_dkg_escrow/: down.sql  up.sql
server/migrations/2025-12-30-202216_create_signing_sessions/: down.sql  up.sql
server/migrations/2025-12-31-115338_create_encrypted_relay/: down.sql  up.sql
server/migrations/2026-01-05-064244_add_dispute_evidence_table/: down.sql  up.sql
server/migrations/2026-01-05-075026_add_auto_resolution_fields/: down.sql  up.sql
server/migrations/2026-01-05-092631_add_dispute_signing_pair/: down.sql  up.sql
server/migrations/2026-01-08-184325_create_notifications_table/: down.sql  up.sql
server/migrations/2026-01-13-110527_create_secure_messaging/: down.sql  up.sql
server/migrations/2026-01-17-181205_add_shipping_cost_to_listings/: down.sql  up.sql
server/migrations/2026-01-18-070904_add_underfunded_tracking/: down.sql  up.sql
server/migrations/2026-01-19-000001_add_btc_payment_support/: down.sql  up.sql
server/migrations/2026-01-20-210728_add_login_attempts_tracking/: down.sql  up.sql
server/migrations/2026-01-21-112110_add_recovery_codes/: down.sql  up.sql
server/migrations/2026-01-21-134453_add_multi_coin_support/: down.sql  up.sql
server/migrations/2026-01-23-095105_wallet_amounts_bigint/: down.sql  up.sql
server/migrations/2026-01-27-000001_add_escrow_description/: down.sql  up.sql
server/migrations/2026-01-27-000002_drop_marketplace_tables/: down.sql  up.sql
server/migrations/2026-01-28-100256_create_api_keys_table/: down.sql  up.sql
server/migrations/2026-01-28-110000_create_webhooks_tables/: down.sql  up.sql
server/migrations/2026-01-28-150000_challenge_stores/: down.sql
server/src/: dependencies.rs  error.rs  lib.rs  main.rs  metrics.rs  redis_pool.rs  schema.rs  telemetry.rs  test_template.rs  wallet_manager.rs  wallet_manager_test_append.rs  wallet_pool.rs  websocket.rs
server/tests/: airgap_integration_test.rs  auth_integration.rs  broadcast_e2e.rs  bug_fixes_validation.rs  escrow_e2e.rs  escrow_noncustodial_e2e.rs  timeout_monitor_test.rs  wallet_manager_e2e.rs  wallet_recovery_test.rs  wallet_registration_e2e.rs
wallet/wasm/: Cargo.toml  README.md  VALIDATION.md  build.sh  nohup.out
(+543 files in other folders)
