[workspace]
members = [
    "common",
    "onyx-types",
    "onyx-crypto-core",
    "onyx-crypto-core/wasm",
    "wallet",
    "wallet/wasm",
    "cli",
    "server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Onyx-Escrow Contributors"]
license = "MIT"
repository = "https://github.com/OnyxEscrow/Onyx"
description = "Non-custodial Monero escrow using FROST threshold signatures (RFC 9591)"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Crypto
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"

# Shared types
onyx-types = { path = "onyx-types" }
onyx-crypto-core = { path = "onyx-crypto-core" }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = true
panic = "abort"
strip = true
debug = false
incremental = false

[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 8
incremental = true
