[package]
name = "nexus-crypto-core"
version = "0.1.0"
edition = "2021"
authors = ["NEXUS Team"]
license = "MIT"
description = "Core cryptographic library for NEXUS EaaS - FROST DKG, CMD protocol, CLSAG signing"
repository = "https://github.com/nexus-escrow/nexus-crypto-core"
keywords = ["monero", "frost", "multisig", "escrow", "cryptography"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "getrandom/js"]
test-helpers = []  # Enables deterministic functions for testing

[dependencies]
# Core Crypto
curve25519-dalek = { version = "4.1", default-features = false, features = ["digest", "rand_core", "zeroize"] }
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["derive"] }

# FROST (RFC 9591)
frost-core = { version = "2.1.0", default-features = false, features = ["serialization"] }
frost-ed25519 = { version = "2.1.0", default-features = false, features = ["serialization"] }

# Monero-specific generators (hash_to_point, H constant)
monero-generators-mirror = { version = "0.4", default-features = false }

# Encoding
hex = { version = "0.4", default-features = false, features = ["alloc"] }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
bs58 = { version = "0.5", default-features = false, features = ["alloc", "check"] }
base58-monero = { version = "2.0", default-features = false, features = ["check"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# AEAD encryption
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }

# Password-based key derivation (for key backup encryption)
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }

# Error handling
thiserror = { version = "1.0", optional = true }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.2" }
thiserror = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lib]
crate-type = ["cdylib", "rlib"]
