[package]
name = "wallet_wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
curve25519-dalek = { version = "4.1", features = ["alloc", "zeroize"], default-features = false }
ed25519-dalek = "2.1"
bip39 = { version = "2.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
base58-monero = { version = "2.0", features = ["check"] }
js-sys = "0.3"
base64 = "0.21"
rand_core = { version = "0.6", features = ["getrandom"] }

# Phase 2: Encrypted relay for 100% non-custodial signing
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# FROST threshold signatures (RFC 9591) - DKG for 2-of-3 multisig
frost-ed25519 = { version = "2.2", default-features = false, features = ["serialization"] }

# NEXUS crypto core (extracted cryptographic primitives)
nexus-crypto-core = { path = "../../nexus-crypto-core" }

# Monero CLSAG signing (WASM-compatible, no multisig feature - requires std)
# We implement our own partial signing logic based on correct CLSAG math
monero-clsag-mirror = { version = "0.1", default-features = false }
monero-primitives-mirror = { version = "0.1", default-features = false }
monero-generators = { package = "monero-generators-mirror", version = "0.4", default-features = false }
monero-io-mirror = { version = "0.1", default-features = false }
std-shims-mirror = { version = "0.1.1", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Headers",
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
